--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Web Comic Reader</title>
+		<meta name="description" content="Read comics stored as .cbr, .cbz, .zip, or .rar files." />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
