--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<title>Web Comic Reader</title>
 		<meta name="description" content="Read comics stored as .cbr, .cbz, .zip, or .rar files." />
+		<link rel="manifest" href="/manifest.json" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
