--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,7 @@
 		<title>Web Comic Reader</title>
 		<meta name="description" content="Read comics stored as .cbr, .cbz, .zip, or .rar files." />
 		<link rel="manifest" href="/manifest.json" />
+		<link rel="apple-touch-icon" href="/reader-180x180.png" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
