--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Read comics stored as .cbr, .cbz, .zip, or .rar files." />
 		<link rel="manifest" href="/manifest.json" />
 		<link rel="apple-touch-icon" href="/reader-180x180.png" />
-		<meta name="theme_color" content="#007ba7" />
+		<meta name="theme-color" content="#007ba7" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
