I don't need the name web in here

--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-		<title>Web Comic Reader</title>
+		<title>Comic Reader</title>
 		<meta name="description" content="Read comics stored as .cbr, .cbz, .zip, or .rar files." />
 		<link rel="manifest" href="/manifest.json" />
 		<link rel="apple-touch-icon" href="/reader-180x180.png" />
